# FractalGenerator

./: .gitignore  Cargo.toml  README.md  error.txt  error_bin.txt
src/: app.rs  color_schemes.rs  fractal_calculator.rs  fractal_params.rs  fractal_types.rs  lib.rs  main.old  main.rs  ui.rs
src/audio/: player.rs
src/fractal/: animation.rs  cache.rs  generator.rs  mod.rs  palette.rs  renderer.rs
src/ui/: animation.rs  app.rs  app_state.rs  interaction.rs  mod.rs  position_manager.rs  settings_panel.rs
