[package]
name = "fractal_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.24.0", features = ["default", "persistence"] }
egui = "0.24.0"
image = "0.24.7"
num = "0.4.1"
rayon = "1.8.0"
rfd = "0.12.1"

[dependencies.winapi]
version = "0.3.9"
features = [
    "winuser",
    "windef",
]
